--- a/bezowka_website/style.css
+++ b/bezowka_website/style.css
@@ -25,12 +25,13 @@
     --vanilla: #f4e3b2ff;
     --hunter-green: #346732ff;
     --indigo-dye: #003d5bff;
+    --navbar-height: 100px;
 }
 
 html, body {
     color: #000;
-    font-family: Caveat;
-    font-size: 160%;
+    font-family: Caveat, serif;
+    font-size: 145%;
     margin: 0;
     padding: 0;
 }
@@ -61,14 +62,13 @@ a {
 h1 {
     text-align: center;
     font-size: 50px;
-    font-family: LogoFont;
+    font-family: LogoFont, sans-serif;
 }
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    padding-right: 0;
 }
 
 nav {
@@ -77,9 +77,10 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    height: 140px;
+    height: var(--navbar-height);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
     align-content: center;
+    vertical-align: center;
 }
 #content {
     width: 100%;
@@ -131,7 +132,7 @@ nav a:hover::after {
 }
 
 #nav-logo {
-    height: 120px;
+    height: calc(var(--navbar-height) - 20px);
     width: auto;
     margin-top: -20px;
 }
@@ -142,6 +143,11 @@ nav a:hover::after {
     width: 100%;
     height: 800px;
     left: 0;
+}
+.container{
+    height: auto;
+    width: 100%;
+
 }
 
 /*
