--- a/bezowka_website/style.css
+++ b/bezowka_website/style.css
@@ -25,7 +25,7 @@
     --vanilla: #f4e3b2ff;
     --hunter-green: #346732ff;
     --indigo-dye: #003d5bff;
-    --navbar-height: 100px;
+    --navbar-height: 15vh;
 }
 
 html, body {
@@ -35,16 +35,7 @@ html, body {
     margin: 0;
     padding: 0;
 }
-footer { 
-    height:50px;
-    background:#000;
-    color:#FFF;
-    text-align:center;
-    margin-top:10px;
-    padding:5px;
-    bottom: 0;
-    left: 0;
-}
+
 a {
     text-decoration: none;
     color: #000;
@@ -59,11 +50,6 @@ a {
     left: 0;
 }
 
-h1 {
-    text-align: center;
-    font-size: 50px;
-    font-family: LogoFont, sans-serif;
-}
 
 ul {
     list-style-type: none;
@@ -81,14 +67,14 @@ nav {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
     align-content: center;
     vertical-align: center;
+    z-index: 1000;
 }
 #content {
     width: 100%;
+    height: auto;
     padding-top: 10px;
-    overflow: hidden;
     left: 0;
     top: 0;
-    height: 1000px;
     margin: 0;
     position: static;
 }
@@ -140,15 +126,120 @@ nav a:hover::after {
     background-image: url(img/temp_background.jpg);
     background-position: center;
     background-size: 20%;
-    width: 100%;
-    height: 800px;
+    width: 100vw;
+    height: 100vh;
     left: 0;
+    padding-top: var(--navbar-height) ;
 }
-.container{
-    height: auto;
-    width: 100%;
 
+.banner {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: var(--navbar-height);
 }
+
+#about-us {
+    background-image: url('about-us.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+#contact {
+    background-image: url('contact.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+#location {
+    background-image: url('location.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.banner-content {
+    width: 100%;
+    color: white;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.banner h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 36px;
+}
+
+.banner p {
+    margin: 10px 0;
+    padding: 0;
+    font-size: 18px;
+}
+
+.footer {
+    background-color: black;
+    color: white;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer-column {
+    width: 30%;
+    padding: 0 15px;
+    box-sizing: border-box;
+}
+
+.footer-column h3 {
+    margin: 0 0 15px;
+}
+
+.footer-column p,
+.footer-column a {
+    margin: 5px 0;
+    text-decoration: none;
+    color: white;
+}
+
+.footer-column a:hover {
+    text-decoration: underline;
+}
+
+.footer-column form input,
+.footer-column form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    box-sizing: border-box;
+}
+
+.footer-column form input[type="submit"] {
+    background-color: #444;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.footer-column form input[type="submit"]:hover {
+    background-color: #555;
+}
+
+
+
+
+
+/*.container{*/
+/*    height: 200px;*/
+/*    width: 100%;*/
+
+/*}*/
 
 /*
 @media only screen and (max-width: 768px) {
