--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html, body {
     padding: 0;
     background-image: url('img/temp_background.jpg');
     background-attachment: fixed;
+    scroll-behavior: smooth;
 }
 
 #content {
@@ -80,7 +81,7 @@ ul {
 }
 
 nav {
-    background-color: white;
+    background-color: var(--vanilla);
     position: fixed;
     top: 0;
     left: 0;
